# python-project-50

./: .gitignore  1111.py  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-coverage.yml
gendiff/: __init__.py
gendiff/code/: comparison.py
gendiff/comparison/: draft.py  file_parser.py  gendiff.py  gendiff_logic.py  line_parser.py  parser.py  plain.py  stylish.py  test.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result_json.txt
