[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vadim <vadimyaskiv89@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]
repository = "https://github.com/VadimYaskiv/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
